[gd_scene load_steps=4 format=2]

[ext_resource path="res://gameplay/ennemis/poule/poule.gd" type="Script" id=1]
[ext_resource path="res://gameplay/ennemis/poule/assets/poule_volante.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Default",
"speed": 5.0
} ]

[node name="poule" type="KinematicBody2D"]
position = Vector2( 70.3967, 63.2619 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( 0.837387, 28.9947, -6.90848, 7.2225, -16.9572, -23.761, -40.1948, -48.0453, -60.0828, -45.3238, -41.0322, -55.1631, -34.1237, -60.8155, -23.8656, -55.7912, -25.3311, -43.8583, 52.965, -4.29163, 54.8491, 5.96642, 28.0526, 29.8321 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "Default"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Label" type="Label" parent="."]
margin_left = -4.0
margin_top = 43.0
margin_right = 36.0
margin_bottom = 57.0

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 2

[node name="TimerAttack" type="Timer" parent="."]
autostart = true

[node name="AfficheDegat" type="Label" parent="."]
margin_left = 42.0
margin_top = -6.0
margin_right = 82.0
margin_bottom = 8.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
visible = false
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( 0.837387, 28.9947, -6.90848, 7.2225, -16.9572, -23.761, -40.1948, -48.0453, -60.0828, -45.3238, -41.0322, -55.1631, -34.1237, -60.8155, -23.8656, -55.7912, -25.3311, -43.8583, 52.965, -4.29163, 54.8491, 5.96642, 28.0526, 29.8321 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_TimerAttack_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
